--- a/ai-chatbot-b3-assignments/oddEven.html
+++ b/ai-chatbot-b3-assignments/oddEven.html
@@ -18,7 +18,12 @@
 
     <p id="output"></p>
 
-	<a href="http://">Code link</a>
+    <a
+      href="https://github.com/shehza-d/ai-nlp-chatbots/blob/main/ai-chatbot-b3-assignments/oddEven.html"
+      target="_blank"
+      >Code link</a
+    >
+
     <script type="module">
       const isPrime = (num) => {
         if (num < 2) return false;
@@ -37,20 +42,24 @@
 
         const userInput = +document.querySelector("#numberInput").value;
 
-        if (!userInput || isNaN(userInput))
+        if (!userInput || isNaN(userInput)) {
           output.textContent = "Unknown Error";
+          return;
+        }
 
         if (String(userInput).length > 11) {
           output.textContent = "Input limit exceeded";
           return;
         }
+
         if (userInput % 2 === 0)
           output.textContent = `The number ${userInput} is Even`;
         else output.textContent = `The number ${userInput} is Odd`;
 
+        console.log("isPrime", isPrime(userInput));
         output.textContent += ` and this is also a ${
           isPrime(userInput) ? "Prime" : "Composite"
-        } Number`;
+        } number.`;
       });
     </script>
   </body>
